k8s_minikube/deploy_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-container
        image: karthikeya2k24/my-go-web-app:1.0.0
        ports:
        - containerPort: 1234
