k8s_minikube/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
spec:
  selector:
    app: go-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1234
  type: ClusterIP
