k8s_minikube/ingress_app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mygoweb.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app-service
            port:
              number: 80
